- fix translating utf8 strings in mdkapplet-add-media-helper (#59509)

Version 2.77.17 - 26 May 2010, Eugeni Dodonov
- updated translations.
- Install mdkapplet-add-media-helper to replace
  mdkapplet-enterprise-update-helper and mdkapplet-restricted-helper (#59500)

Version 2.77.16 - 19 May 2010, João Victor Duarte Martins
- Translations updates.
- Powerpack offering feature during upgrade is functional.

Version 2.77.15.19 - 18 May 2010, João Victor Duarte Martins
- mdkapplet-upgrade-helper
  o Fixed log file name bug (#59200).
  o Offers users Powerpack medias before upgrade
- mdkapplet-restricted-helper
  o Fixed password field bug (#59201).

Version 2.77.15.18 - 30 April 2010, Thierry Vignaud
- mdkapplet
  o do not offer distribution upgrade on OEM Philco systems
- mdkapplet-extended-maintenance-helper
  o install only on distributions with extended maintenance
    (2008.0, 2009.0, 2010.0)

Version 2.77.15.17 - 10 February 2010, Thierry Vignaud
- mdkapplet
  o fix dates display wrong by one month
  o fix new distro popup appearing on 2008.0 after choices have been displayed
  o ignore lines starting with # in distro list

Version 2.77.15.16 - 5 February 2010, Thierry Vignaud

- mdkapplet 
  o do not check for new distro when using extended maintenance
  o further fix notifying extended maintenance taking over regular
    maintenance
  o warn when extended maintenance is over

Version 2.77.15.15 - 4 February 2010, Thierry Vignaud

- mdkapplet 
  o advertize only once when has extended maintenance when
    regular one is expired
  o fix notifying extended maintenance taking over regular maintenance

Version 2.77.15.14 - 3 February 2010, Thierry Vignaud

- mdkapplet-extended-maintenance-helper
  o add a 'Lifetime policy' button
  o display 'no more supportion' dialog only once

Version 2.77.15.13 - 3 February 2010, Thierry Vignaud

- mdkapplet 
  o prevent displaying twice the same 'no longuer supported' dialog
