@@ -1,4 +1,5 @@
-- fix translating utf8 strings in mdkapplet-add-media-helper (#59509)
+- Updated powerpack offering upgrade dialogs
+- Fix translating utf8 strings in mdkapplet-add-media-helper (#59509)
 
 Version 2.77.17 - 26 May 2010, Eugeni Dodonov
 - updated translations.
